--- a/content/post/il-2025-12.adoc
+++ b/content/post/il-2025-12.adoc
@@ -11,13 +11,13 @@ categories:
 
 Well it's that time of year already!
 Whilst munching on a https://en.wikipedia.org/wiki/Mince_pie[mince pie], enjoy the final Interesting Links for 2025.
-It's been an busy twelve months for me; this time last year I was signing off from my last company, which went on to be https://redis.io/blog/redis-to-acquire-decodable-to-turbocharge-our-real-time-data-platform/[acquired]—and last week I found out that my current company (Confluent) is to be https://newsroom.ibm.com/2025-12-08-ibm-to-acquire-confluent-to-create-smart-data-platform-for-enterprise-generative-ai[acquired by IBM].
+It's been a busy twelve months for me; this time last year I was signing off from my last company, which went on to be https://redis.io/blog/redis-to-acquire-decodable-to-turbocharge-our-real-time-data-platform/[acquired]—and last week I found out that my current company (Confluent) is to be https://newsroom.ibm.com/2025-12-08-ibm-to-acquire-confluent-to-create-smart-data-platform-for-enterprise-generative-ai[acquired by IBM].
 Despite my reaction against any kind of https://en.wikipedia.org/wiki/Who_Moved_My_Cheese%3F[cheese moving], I figure this is going to be an interesting development and a whole new experience for me :)
 
 <!--more-->
 
 Just one blog post of my own to share from this month—a write-up of some investigation that I did using Neo4j and graph analysis to identify https://rmoff.net/2025/12/01/using-graph-analysis-with-neo4j-to-spot-astroturfing-on-reddit/[astroturfing on Reddit].
-It turns out that there are marketing agencies out there who think it's a good idea to spoil things for everyone else by selling astroturfing-as-a-service to at least two vendors in this space who paid them for it.
+It turns out that there are marketing agencies out there who think it's a good idea to spoil things for everyone else by offering astroturfing-as-a-service to at least two vendors in this space who paid them for it.
 
 My previous employer has kindly allowed me to host my previous blog posts here on rmoff.net, which I'm delighted about.
 If you've not seen them already, here are some of the highlights:
@@ -33,24 +33,20 @@ And so…on with the interesting links!
 
 _Not got time for all this? I've marked 🔥 for my top reads of the month_ :)
 
-[TIP]
-====
-Medium posts often skulk behind a gate; https://removepaywalls.com/ and https://freedium-mirror.cfd/ are both useful here.
-I used to link direct to freedium.cfd but it went offline, which broke all the links…so for now I'll just link to Medium, but provide these sites here for you to manually use :)
-====
+TIP: Medium posts often skulk behind a gate, so I've hyperlinked to the Freedium version and included a link to the original using a ⓜ️ icon should you prefer to visit that (or if freedium goes offline).
 
 == Kafka and Event Streaming
 * Aviv Dozorets published a new tool, https://themoah.medium.com/introducing-klag-the-kafka-lag-exporter-i-always-wanted-d919bdb64a7a[klag], billed as a replacement for the deprecated Kafka Lag Exporter.
 * 🔥 Sandon Jacobs has an excellent lightboard explainer of the new https://www.youtube.com/watch?v=Wb0xyqgaIqw&feature=youtu.be[Queues for Kafka] introduced with KIP-932.
 * Jepsen's test reports are always interesting to read, including https://jepsen.io/analyses/nats-2.12.1[this recent one] in which he uncovers issues in NATS JetStream.
-* I mean, if a Kafka alternative isn't written in Rust these days, is it even worth writing? Snark aside, https://github.com/nubskr/walrus[walrus] claims higher performance than Kafka, although isn't API compatible.
+* I mean, if a Kafka alternative isn't written in Rust these days, is it even worth writing? Snark aside, https://github.com/nubskr/walrus[walrus] claims higher performance than Kafka, although it isn't API compatible.
 * WarpStream have always published good blog posts, and this one from Maud Gautier continues the trend, with technical details of how they https://medium.com/@warpstream/going-all-in-on-protobuf-with-schema-registry-and-tableflow-8132045ab63d[added support for Protobuf with Schema Registry].
 * This post from Yifeng Liu gives some practical advice on https://medium.com/@HobokenDays/rethinking-duplication-c1f85f1c0102[how to architect Kafka topics], specifically with regards to duplication (which is sometimes totally OK, the author argues).
-* Platformatic's nodeJS client has had a 223% speed boost—Paolo Insogna https://blog.platformatic.dev/how-we-made-platformatickafka-223-faster-and-what-we-learned-along-the-way[describes how].
+* Platformatic's Node.js client has had a 223% speed boost—Paolo Insogna https://blog.platformatic.dev/how-we-made-platformatickafka-223-faster-and-what-we-learned-along-the-way[describes how].
 
 == Stream Processing
 
-* Souquieres Adam has ben busy, looking at https://medium.com/@souquieres.adam/kafka-streams-vs-apache-flink-a-pragmatic-comparison-for-stream-processing-and-why-you-should-66fc0b641b26[Kafka Streams vs Apache Flink] and https://medium.com/@souquieres.adam/where-are-we-really-with-streaming-technology-adoption-24b418b077fb[Where Are We Really With Streaming Technology Adoption?], as well as detailing https://medium.com/@souquieres.adam/why-i-stopped-using-high-level-streaming-joins-ff8178dd3bf9[Why I Stopped Using High-Level Streaming Joins]
+* Souquieres Adam has been busy, looking at https://medium.com/@souquieres.adam/kafka-streams-vs-apache-flink-a-pragmatic-comparison-for-stream-processing-and-why-you-should-66fc0b641b26[Kafka Streams vs Apache Flink] and https://medium.com/@souquieres.adam/where-are-we-really-with-streaming-technology-adoption-24b418b077fb[Where Are We Really With Streaming Technology Adoption?], as well as detailing https://medium.com/@souquieres.adam/why-i-stopped-using-high-level-streaming-joins-ff8178dd3bf9[Why I Stopped Using High-Level Streaming Joins]
 * Enes Harman takes a look at https://enesharman.medium.com/watermark-generation-in-flink-e184d93cda80[Watermark Generation in Flink].
     ** Shameless plug: If you're interested in watermarks, make sure to check out https://flink-watermarks.wtf/[Flink Watermarks…WTF] :)
 * A deep-dive from Shuo Cheng looking at https://hudi.apache.org/blog/2025/12/10/apache-hudi-11-deep-dive-optimizing-streaming-ingestion-with-flink/[improvements to ingestion with Flink in Apache Hudi 1.1].
@@ -85,14 +81,14 @@ https://fluss.apache.org/blog/2025/12/02/fluss-x-iceberg-why-your-lakehouse-is-n
 * 🔥 Joe Reis is looking for https://joereis.substack.com/p/help-shape-the-practical-data-2026[folk to answer a few questions] in a survey to support the Practical Data 2026 State of Data Engineering Report that he's writing
 * A nice primer from Henry Liao for anyone new to dbt or DuckDB on using them to https://medium.com/@lhungen/c8080ee89036?sk=42fa4ea193a948ec146f33d094e3ecd8[build an ETL pipeline].
 * A couple of good blogs from the team at Karrot this month. Jin-won Park has a deep-dive explanation of https://medium.com/daangn/mapping-karrots-data-how-we-built-column-level-lineage-5914d67a554c[how they derive column-level lineage] by parsing query logs in BigQuery, whilst Seungki Kim details https://medium.com/daangn/karrots-journey-to-cdc-with-mongodb-e052b1c3ec9c[the evaluation they did of Kafka Connect, Debezium, and Flink for doing CDC from MongoDB] and which they chose.
-* It's not all tools and streaming—here's a post from McDonalds describing their https://medium.com/mcdonalds-technical-blog/built-to-scale-how-a-config-driven-etl-engine-is-powering-environmental-social-and-governance-d0cd2383554f[batch-based Python+YAML pipelines].
-* What's old is new, and no more is that the case at the moment than the semantic layer—a concept that has been around in IT for _decades_. My former boss Mark Rittman has a great write-up here of one of the tools that was there then: https://blog.rittmananalytics.com/an-homage-to-oracle-warehouse-builder-25-years-ahead-of-its-time-22b9b9c4363c[An Homage to Oracle Warehouse Builder].
-* Ojesav Srivastava at Flipkart writes up Triton, a ZooKeeper‑coordinated Coordinator/Master/Worker platform on Kubernetes StatefulSets for reliable, high‑throughput https://blog.flipkart.tech/triton-scaling-bulk-operations-with-a-feed-processing-platform-94c750efa07c[bulk file ingest at scale].
-* Nurdan Almazbekov has a detailed write-up of https://engineeringblog.yelp.com/2025/09/s3-server-access-logs-at-scale.html[how Yelp store and query S3 access logs at scale using Parquet and Athena] [S3 server access logs at scale]. There's a https://www.infoq.com/news/2025/12/yelp-s3-server-access-logs/[summary of the post] from Craig Risi at InfoQ too.
+* It's not all tools and streaming—here's a post from McDonald's describing their https://medium.com/mcdonalds-technical-blog/built-to-scale-how-a-config-driven-etl-engine-is-powering-environmental-social-and-governance-d0cd2383554f[batch-based Python+YAML pipelines].
+* What's old is new, and nowhere is that more true at the moment than with the semantic layer—a concept that has been around in IT for _decades_. My former boss Mark Rittman has a great write-up here of one of the tools that was there then: https://blog.rittmananalytics.com/an-homage-to-oracle-warehouse-builder-25-years-ahead-of-its-time-22b9b9c4363c[An Homage to Oracle Warehouse Builder].
+* Ojesav Srivastava at Flipkart writes up Triton, a ZooKeeper-coordinated Coordinator/Master/Worker platform on Kubernetes StatefulSets for reliable, high‑throughput https://blog.flipkart.tech/triton-scaling-bulk-operations-with-a-feed-processing-platform-94c750efa07c[bulk file ingest at scale].
+* Nurdan Almazbekov has a detailed write-up of https://engineeringblog.yelp.com/2025/09/s3-server-access-logs-at-scale.html[how Yelp stores and queries S3 access logs at scale using Parquet and Athena].
 * Good tips from Erfan Hesami on https://pipeline2insights.substack.com/p/data-quality-design-patterns-wap-awap[Data Quality Design Patterns] based around the WAP (Write-Audit-Publish) concept.
 * The second part of an excellent hands-on blog series from Nicoleta Lazar at Fresha with https://medium.com/fresha-data-engineering/the-real-time-data-journey-connecting-flink-airflow-and-starrocks-part-2-43e94a6ef04b[details of their Postgres/Kafka/Flink/StarRocks pipeline].
 * "One version of the truth" is an aim many have but not all achieve—Shlomit Goldenberg and Lihi Gilboa (Aziz) from Riskified describe their https://medium.com/riskified-technology/building-data-you-can-trust-our-journey-to-a-single-source-of-truth-baab80277d4a[Journey to a Single Source of Truth].
-* A couple of interesting blogs from DoorDash: Omik Mahajan has an excellent performance deep-dive into the performance of their https://careersatdoordash.com/blog/doordash-optimizing-in-house-search-engine-platform/[in-house search engine platform], whilst Dave Press describes how they built https://careersatdoordash.com/blog/doordash-anomaly-detection-platform-to-catch-fraud-trends/[an anomaly detection platform].
+* A couple of interesting blogs from DoorDash: Omik Mahajan has an excellent deep-dive into the performance of their https://careersatdoordash.com/blog/doordash-optimizing-in-house-search-engine-platform/[in-house search engine platform], whilst Dave Press describes how they built https://careersatdoordash.com/blog/doordash-anomaly-detection-platform-to-catch-fraud-trends/[an anomaly detection platform].
 * Lokeshbabu Radhakrishnan has an excellent blog post detailing https://engineering.zalando.com/posts/2025/07/direct-data-sharing-using-delta-sharing.html[why and how Zalando use Delta Sharing] for low-latency and zero-copy access to data with partners.
 * https://aws.amazon.com/blogs/big-data/run-apache-spark-and-apache-iceberg-write-jobs-2x-faster-with-amazon-emr/[Run Apache Spark and Apache Iceberg write jobs 2x faster with Amazon EMR | Amazon Web Services]
 * https://aws.amazon.com/blogs/big-data/run-apache-spark-and-iceberg-4-5x-faster-than-open-source-spark-with-amazon-emr/[Run Apache Spark and Iceberg 4.5x faster than open source Spark with Amazon EMR | Amazon Web Services]
@@ -111,12 +107,11 @@ https://fluss.apache.org/blog/2025/12/02/fluss-x-iceberg-why-your-lakehouse-is-n
 == RDBMS
 
 * 🔥 Very cool deep-dive by Radim Marek into https://boringsql.com/posts/vacuum-is-lie/[Postgres indexes and storage].
-* https://www.uber.com/en-GB/blog/improving-mysql-cluster-uptime-part1/[Two] https://www.uber.com/en-GB/blog/improving-mysql-cluster-uptime-part2/[part] series from Siddharth Singh and team at Uber looking at how they manage high-availability for their MySQL clusters.
+* https://www.uber.com/en-GB/blog/improving-mysql-cluster-uptime-part1/[Two]-https://www.uber.com/en-GB/blog/improving-mysql-cluster-uptime-part2/[part] series series from Siddharth Singh and team at Uber looking at how they manage high-availability for their MySQL clusters.
 * Sometimes the answer is not NoSQL, but No! SQL. Or something like that. Anyway, Trendyol have written about https://medium.com/trendyol-tech/seller-eligibility-system-our-journey-from-nosql-to-rdbms-f56dafaa1f02[their challenges with Couchbase (NoSQL) and subsequent migration to Postgres].
 
 == General Data Stuff
 * 🔥 Industry luminaries Mike Stonebraker and Andy Pavlo present their https://www.youtube.com/watch?v=RnQKluxWB5Y[2025 Year in Review]
-* https://www.infoq.com/news/2025/12/yelp-s3-server-access-logs/[Yelp Publishes Blueprint for Managing S3 Server-Access Logs at Massive Scale]
 * Ergest Xheblati https://sqlpatterns.com/p/the-most-powerful-timeless-skill[argues that the most important skill as a data professional] isn't fancy SQL or l33t coding; it's being able to work within an organisation to identify where you can have the most benefit and help identify the actual questions the business want to answer from the data.
 * A new paper from Matthias Jasny and others looking at https://arxiv.org/pdf/2512.04859v1[io_uring for High-Performance DBMSs: When and How to Use It]
 * 🪦 RIP MinIO :( Previously an excellent choice for building demos and PoCs for projects that needed S3 storage locally, MinIO has spent the last few months dismantling their community offering, https://github.com/minio/object-browser/pull/3509[removing the GUI], https://github.com/minio/minio/issues/21647#issuecomment-3418675115[ending Docker builds], and now moving the https://github.com/minio/minio/commit/27742d469462e1561c776f88ca7a1f26816d69e2[project into maintenance mode].
@@ -151,7 +146,7 @@ _Nothing to do with data, but stuff that I've found interesting or has made me s
 
 === Fun
 * https://objectiveunclear.com/airloom.html[Air Loom - 3D Flight Tracker]
-* https://pagedout.institute/download/PagedOut_007.pdf[PagedOut] is a 'zine gives me heavy nostalgia vibes :)
+* https://pagedout.institute/download/PagedOut_007.pdf[PagedOut] is a 'zine that gives me heavy nostalgia vibes :)
 
 === Write
 * Paradoxically, I read this post from Joe Boudreau on https://flowtwo.io/post/on-10-years-of-writing-a-blog-nobody-reads[10 Years of Writing a Blog Nobody Reads]
@@ -159,7 +154,7 @@ _Nothing to do with data, but stuff that I've found interesting or has made me s
 === Listen
 * I used to love listening to https://www.lofiatc.com/[LoFi ATC] and was disappointed to find it no longer works.
 One alternative I found recently is https://lofiatc.pieter.com/[Lo-fi ATC - 🇧🇷 Brazil Edition].
-Something else I've found pretty neat is two browser tabs open; one with https://mynoise.net/NoiseMachines/cafeRestaurantNoiseGenerator.php[MyNoise's Cafe Restaurant] sounds, the other with so https://www.youtube.com/playlist?list=PLQ176FUIyIUZ5sDV_Yb_lWWHU9mmdb5xs[lofi], https://www.mixcloud.com/dannyrampling/forever-acid-house-danny-rampling/[house], or whatever :)
+Something else I've found pretty neat is two browser tabs open; one with https://mynoise.net/NoiseMachines/cafeRestaurantNoiseGenerator.php[MyNoise's Cafe Restaurant] sounds, the other with some https://www.youtube.com/playlist?list=PLQ176FUIyIUZ5sDV_Yb_lWWHU9mmdb5xs[Lo-fi], https://www.mixcloud.com/dannyrampling/forever-acid-house-danny-rampling/[house], or whatever :)
 
 ---
 
