copyedit, add images

--- a/content/post/il-2025-12.adoc
+++ b/content/post/il-2025-12.adoc
@@ -2,8 +2,8 @@
 draft: false
 title: 'Interesting links - December 2025'
 date: "2025-12-16T10:08:00Z"
-image: "/images/2025/12/"
-thumbnail: "/images/2025/12/"
+image: "/images/2025/12/h_IMG_3380.jpeg"
+thumbnail: "/images/2025/12/t_IMG_3382.jpeg"
 credit: "https://bsky.app/profile/rmoff.net"
 categories:
 - Interesting Links
@@ -11,13 +11,14 @@ categories:
 
 Well it's that time of year already!
 Whilst munching on a https://en.wikipedia.org/wiki/Mince_pie[mince pie], enjoy the final Interesting Links for 2025.
-It's been a busy twelve months for me; this time last year I was signing off from my last company, which went on to be https://redis.io/blog/redis-to-acquire-decodable-to-turbocharge-our-real-time-data-platform/[acquired]—and last week I found out that my current company (Confluent) is to be https://newsroom.ibm.com/2025-12-08-ibm-to-acquire-confluent-to-create-smart-data-platform-for-enterprise-generative-ai[acquired by IBM].
-Despite my reaction against any kind of https://en.wikipedia.org/wiki/Who_Moved_My_Cheese%3F[cheese moving], I figure this is going to be an interesting development and a whole new experience for me :)
+
+_It's been a busy twelve months for me; this time last year I was signing off from my last company, which went on to be https://redis.io/blog/redis-to-acquire-decodable-to-turbocharge-our-real-time-data-platform/[acquired]—and last week I found out that my current company (Confluent) is to be https://newsroom.ibm.com/2025-12-08-ibm-to-acquire-confluent-to-create-smart-data-platform-for-enterprise-generative-ai[acquired by IBM]._
+_Despite my reaction against any kind of https://en.wikipedia.org/wiki/Who_Moved_My_Cheese%3F[cheese moving], I figure this is going to be an interesting development and a whole new experience for me :)_
 
 <!--more-->
 
 Just one blog post of my own to share from this month—a write-up of some investigation that I did using Neo4j and graph analysis to identify https://rmoff.net/2025/12/01/using-graph-analysis-with-neo4j-to-spot-astroturfing-on-reddit/[astroturfing on Reddit].
-It turns out that there are marketing agencies out there who think it's a good idea to spoil things for everyone else by offering astroturfing-as-a-service to at least two vendors in this space who paid them for it.
+It turns out that there are marketing agencies out there who think it's a good idea to spoil things for everyone else by offering astroturfing-as-a-service to at least two vendors in this space who paid them for it 🙄.
 
 My previous employer has kindly allowed me to host my previous blog posts here on rmoff.net, which I'm delighted about.
 If you've not seen them already, here are some of the highlights:
@@ -53,8 +54,7 @@ TIP: Medium posts often skulk behind a gate, so I've hyperlinked to the Freedium
 * Details from Avito about https://habr.com/ru/companies/avito/articles/959382/[how they use Flink SQL] and deploy it with the https://habr.com/ru/companies/avito/articles/972412/[Flink Kubernetes operator].
 The pages are in Russian but browser translation works well :)
 * Jaehyeon Kim has a new post, showing https://jaehyeon.me/blog/2025-12-10-streaming-processing-with-flink-in-kotlin/[how to use Flink with Kotlin].
-* 🔥 Great post from Mehul Batra and Luo Yuxia making the case for Apache Fluss, and explaining why Iceberg alone isn't sufficient for a real-time lakehouse.
-https://fluss.apache.org/blog/2025/12/02/fluss-x-iceberg-why-your-lakehouse-is-not-streamhouse-yet/[Fluss × Iceberg (Part 1): Why Your Lakehouse Isn’t a Streamhouse Yet | Apache Fluss™ (Incubating)]
+* 🔥 Great post from Mehul Batra and Luo Yuxia https://fluss.apache.org/blog/2025/12/02/fluss-x-iceberg-why-your-lakehouse-is-not-streamhouse-yet/[making the case for Apache Fluss], and explaining why Iceberg alone isn't sufficient for a real-time lakehouse.
 * Details from the team at Uber about https://www.uber.com/blog/from-batch-to-streaming-accelerating-data-freshness-in-ubers-data-lake/[their move from batch to realtime with Kafka/Flink/Hudi] and some of the problems they solved along the way.
 * https://flink.apache.org/2025/12/04/apache-flink-2.2.0-advancing-real-time-data\--ai-and-empowering-stream-processing-for-the-ai-era/[Apache Flink 2.2 has been released], and includes improvements to Materialized Tables, Delta Join as well as new vector search and real-time AI features.
 * Yaroslav Tkachenko wrote https://www.streamingdata.tech/p/why-apache-flink-is-not-going-anywhere[a thoughtful piece about Flink], defending it from its detractors.
@@ -90,10 +90,6 @@ https://fluss.apache.org/blog/2025/12/02/fluss-x-iceberg-why-your-lakehouse-is-n
 * "One version of the truth" is an aim many have but not all achieve—Shlomit Goldenberg and Lihi Gilboa (Aziz) from Riskified describe their https://medium.com/riskified-technology/building-data-you-can-trust-our-journey-to-a-single-source-of-truth-baab80277d4a[Journey to a Single Source of Truth].
 * A couple of interesting blogs from DoorDash: Omik Mahajan has an excellent deep-dive into the performance of their https://careersatdoordash.com/blog/doordash-optimizing-in-house-search-engine-platform/[in-house search engine platform], whilst Dave Press describes how they built https://careersatdoordash.com/blog/doordash-anomaly-detection-platform-to-catch-fraud-trends/[an anomaly detection platform].
 * Lokeshbabu Radhakrishnan has an excellent blog post detailing https://engineering.zalando.com/posts/2025/07/direct-data-sharing-using-delta-sharing.html[why and how Zalando use Delta Sharing] for low-latency and zero-copy access to data with partners.
-* https://aws.amazon.com/blogs/big-data/run-apache-spark-and-apache-iceberg-write-jobs-2x-faster-with-amazon-emr/[Run Apache Spark and Apache Iceberg write jobs 2x faster with Amazon EMR | Amazon Web Services]
-* https://aws.amazon.com/blogs/big-data/run-apache-spark-and-iceberg-4-5x-faster-than-open-source-spark-with-amazon-emr/[Run Apache Spark and Iceberg 4.5x faster than open source Spark with Amazon EMR | Amazon Web Services]
-* https://aws.amazon.com/blogs/big-data/medidatas-journey-to-a-modern-lakehouse-architecture-on-aws/[Medidata’s journey to a modern lakehouse architecture on AWS | Amazon Web Services]
-
 
 == Open Table Formats (OTF), Catalogs, Lakehouses etc.
 * WarpStream's Richard Artoul has written an explainer of how their https://www.warpstream.com/blog/what-react-and-apache-iceberg-have-in-common-scaling-iceberg-with-virtual-metadata[Tableflow product efficiently writes Iceberg metadata].
@@ -107,7 +103,7 @@ https://fluss.apache.org/blog/2025/12/02/fluss-x-iceberg-why-your-lakehouse-is-n
 == RDBMS
 
 * 🔥 Very cool deep-dive by Radim Marek into https://boringsql.com/posts/vacuum-is-lie/[Postgres indexes and storage].
-* https://www.uber.com/en-GB/blog/improving-mysql-cluster-uptime-part1/[Two]-https://www.uber.com/en-GB/blog/improving-mysql-cluster-uptime-part2/[part] series series from Siddharth Singh and team at Uber looking at how they manage high-availability for their MySQL clusters.
+* https://www.uber.com/en-GB/blog/improving-mysql-cluster-uptime-part1/[Two] https://www.uber.com/en-GB/blog/improving-mysql-cluster-uptime-part2/[part] series from Siddharth Singh and team at Uber looking at how they manage high-availability for their MySQL clusters.
 * Sometimes the answer is not NoSQL, but No! SQL. Or something like that. Anyway, Trendyol have written about https://medium.com/trendyol-tech/seller-eligibility-system-our-journey-from-nosql-to-rdbms-f56dafaa1f02[their challenges with Couchbase (NoSQL) and subsequent migration to Postgres].
 
 == General Data Stuff
