use relative links

--- a/content/post/il-2025-12.adoc
+++ b/content/post/il-2025-12.adoc
@@ -17,16 +17,16 @@ _Despite my reaction against any kind of https://en.wikipedia.org/wiki/Who_Moved
 
 <!--more-->
 
-Just one blog post of my own to share from this month—a write-up of some investigation that I did using Neo4j and graph analysis to identify https://rmoff.net/2025/12/01/using-graph-analysis-with-neo4j-to-spot-astroturfing-on-reddit/[astroturfing on Reddit].
+Just one blog post of my own to share from this month—a write-up of some investigation that I did using Neo4j and graph analysis to identify link:/2025/12/01/using-graph-analysis-with-neo4j-to-spot-astroturfing-on-reddit/[astroturfing on Reddit].
 It turns out that there are marketing agencies out there who think it's a good idea to spoil things for everyone else by offering astroturfing-as-a-service to at least two vendors in this space who paid them for it 🙄.
 
 My previous employer has kindly allowed me to host my previous blog posts here on rmoff.net, which I'm delighted about.
 If you've not seen them already, here are some of the highlights:
 
-* https://rmoff.net/2024/10/15/why-do-i-need-cdc/[Why Do I Need CDC?] & https://rmoff.net/2024/12/11/exploring-flink-cdc/[Exploring Flink CDC]
-* https://rmoff.net/2024/07/18/sending-data-to-apache-iceberg-from-apache-kafka-with-apache-flink/[Sending Data to Apache Iceberg from Apache Kafka with Apache Flink]
-* Troubleshooting Flink SQL https://rmoff.net/2024/08/06/troubleshooting-flink-sql-s3-problems/[S3] & https://rmoff.net/2024/02/27/flink-sql-and-the-joy-of-jars/[general JAR problems]
-* Catalogs in Flink SQL: https://rmoff.net/2024/02/16/catalogs-in-flink-sqla-primer/[A Primer] & https://rmoff.net/2024/02/19/catalogs-in-flink-sqlhands-on/[Hands On]
+* link:/2024/10/15/why-do-i-need-cdc/[Why Do I Need CDC?] & link:/2024/12/11/exploring-flink-cdc/[Exploring Flink CDC]
+* link:/2024/07/18/sending-data-to-apache-iceberg-from-apache-kafka-with-apache-flink/[Sending Data to Apache Iceberg from Apache Kafka with Apache Flink]
+* Troubleshooting Flink SQL link:/2024/08/06/troubleshooting-flink-sql-s3-problems/[S3] & link:/2024/02/27/flink-sql-and-the-joy-of-jars/[general JAR problems]
+* Catalogs in Flink SQL: link:/2024/02/16/catalogs-in-flink-sqla-primer/[A Primer] & link:/2024/02/19/catalogs-in-flink-sqlhands-on/[Hands On]
 
 ---
 
@@ -156,5 +156,5 @@ Something else I've found pretty neat is two browser tabs open; one with https:/
 
 [NOTE]
 ====
-* If you like these kind of links you might like to read about https://rmoff.net/2024/05/22/how-i-try-to-keep-up-with-the-data-tech-world-a-list-of-data-blogs/[How I Try To Keep Up With The Data Tech World (A List of Data Blogs)]
+* If you like these kind of links you might like to read about link:/2024/05/22/how-i-try-to-keep-up-with-the-data-tech-world-a-list-of-data-blogs/[How I Try To Keep Up With The Data Tech World (A List of Data Blogs)]
 ====
